@@ -1,5 +1,10 @@
 2012-01-25  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/btrfs.c (grub_btrfs_device): New field size.
+	(read_sblock): Don't attempt to read superblocks outside the disk size.
+
+2012-01-25  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/nilfs2.c (grub_nilfs2_load_sb): Use device size from
 	first superblock to find the second one when possible.
 
